--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Package lock files
+pubspec.lock
