--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  logger: ^0.8.3
+  provider: ^4.0.4
+  shared_preferences: ^0.5.6+2
+  intl: ^0.16.1
+  dio: ^3.0.9
+  sqflite: ^1.2.1
+  path: ^1.6.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,12 +34,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  provider: ^4.0.4
-  shared_preferences: ^0.5.6+2
-  intl: ^0.16.1
-  dio: ^3.0.9
-  sqflite: ^1.2.1
-  path: ^1.6.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
