--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,16 +15,17 @@ version: 0.0.1-prealpha
 
 environment:
   sdk: '>=2.2.3 <3.0.0'
+  flutter: ^1.17.5
 
 dependencies:
   flutter:
     sdk: flutter
-  logger: ^0.8.3
-  provider: ^4.0.4
-  shared_preferences: ^0.5.6+2
+  logger: ^0.9.1
+  provider: ^4.1.0
+  shared_preferences: ^0.5.7+1
   intl: ^0.16.1
   dio: ^3.0.9
-  sqflite: ^1.2.1
+  sqflite: ^1.3.0+1
   path: ^1.6.4
 
   # The following adds the Cupertino Icons font to your application.
