--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,26 +11,27 @@ description: basic user onboarding for flutter
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.1-prealpha
+version: 0.0.1-prealpha+1
 
 environment:
   sdk: '>=2.6.0 <3.0.0'
-  flutter: ^1.17.5
+  flutter: 1.22.5
 
 dependencies:
   flutter:
     sdk: flutter
-  logger: ^0.9.1
-  provider: ^4.1.0
-  shared_preferences: ^0.5.7+1
-  intl: ^0.16.1
-  dio: ^3.0.9
-  sqflite: ^1.3.0+1
-  path: ^1.6.4
+  intl: 0.16.1
+  provider: 4.3.2+3
+  shared_preferences: 0.5.12+4
+  sqflite: 1.3.2+1
+  path: 1.8.0-nullsafety.1
+  logger: 0.9.4
+  dio: 3.0.10
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  #Icons
+  cupertino_icons: 1.0.0
+  flutter_icons: 1.1.0
+  google_fonts: 1.1.1
 
 dev_dependencies:
   flutter_test:
