--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,27 +11,29 @@ description: basic user onboarding for flutter
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.1-prealpha+1
+version: 1.0.0+2
 
 environment:
-  sdk: '>=2.6.0 <3.0.0'
-  flutter: 1.22.5
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: 2.0.1
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: 0.16.1
-  provider: 4.3.2+3
-  shared_preferences: 0.5.12+4
-  sqflite: 1.3.2+1
-  path: 1.8.0-nullsafety.1
-  logger: 0.9.4
-  dio: 3.0.10
+  intl: 0.17.0
+  provider: 5.0.0
+  shared_preferences: 2.0.3
+  sqflite: ^2.0.0+2
+  path: 1.8.0
+  logger: ^1.0.0-nullsafety.0
+  dio: ^4.0.0-beta4
+  path_provider: ^2.0.1
+
 
   #Icons
-  cupertino_icons: 1.0.0
+  cupertino_icons: 1.0.2
   flutter_icons: 1.1.0
-  google_fonts: 1.1.1
+  google_fonts: 2.0.0
 
 dev_dependencies:
   flutter_test:
