--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   logger: ^1.0.0-nullsafety.0
   dio: ^4.0.0-beta4
   path_provider: ^2.0.1
+  responsive_layout_builder: ^0.5.0
 
 
   #Icons
