--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,14 +11,77 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2 
       - uses: actions/setup-java@v1
         with:
           java-version: 12.x
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: 2.0.x
-      - run: flutter pub get
-      - run: flutter build web
-      - run: flutter build apk --debug --split-per-abi
-      - run: flutter build ios --debug --no-codesign
+      - name: Get packages
+        run: flutter pub get
+      - name: Build Web
+        run: flutter build web
+      - name: Build Android (Debug)
+        run: flutter build apk --debug --split-per-abi
+      - name: Build iOS (Debug-notsigned) Runner.app
+        run: flutter build ios --debug --no-codesign
+      - run: mkdir build/ios/iphoneos/Payload
+      - run: mv build/ios/iphoneos/Runner.app build/ios/iphoneos/Payload
+      - uses: montudor/action-zip@v0.1.1
+        with:
+          args: zip -r -0 build/ios/payload.zip build/ios/iphoneos/Payload
+      - uses: montudor/action-zip@v0.1.1
+        with:
+          args: zip -r -0 build/web.zip build/web
+      - run: mv build/ios/payload.zip build/ios/application-ios.ipa
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: true
+      - name: Upload Android build ARM 32 bit
+        id: upload-android-build 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./build/app/outputs/flutter-apk/app-armeabi-v7a-debug.apk
+          asset_name: app-armeabi-v7a-debug.apk
+          asset_content_type: application/zip
+      - name: Upload Android build ARM 64 bit
+        id: upload-android-build 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./build/app/outputs/flutter-apk/app-arm64-v8a-debug.apk
+          asset_name: app-arm64-v8a-debug.apk
+          asset_content_type: application/zip
+      - name: Upload iOS build
+        id: upload-android-build 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./build/ios/application-ios.ipa
+          asset_name: application-ios.ipa
+          asset_content_type: application/zip
+      - name: Upload Web build
+        id: upload-android-build 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./build/web.zip
+          asset_name: web.zip
+          asset_content_type: application/zip
