--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,11 @@ dependencies:
     sdk: flutter
   intl: 0.17.0
   provider: 5.0.0
-  shared_preferences: 2.0.3
-  sqflite: ^2.0.0+2
+  shared_preferences: 2.0.5
+  sqflite: ^2.0.0+3
   path: 1.8.0
-  logger: ^1.0.0-nullsafety.0
-  dio: ^4.0.0-beta4
+  logger: 1.0.0
+  dio: ^4.0.0-prev3
   path_provider: ^2.0.1 
 
 
