--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
           draft: false
           prerelease: true
       - name: Upload Android build ARM 32 bit
-        id: upload-android-build 
+        id: upload-android32-build 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -56,7 +56,7 @@ jobs:
           asset_name: app-armeabi-v7a-debug.apk
           asset_content_type: application/zip
       - name: Upload Android build ARM 64 bit
-        id: upload-android-build 
+        id: upload-android64-build 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -66,7 +66,7 @@ jobs:
           asset_name: app-arm64-v8a-debug.apk
           asset_content_type: application/zip
       - name: Upload iOS build
-        id: upload-android-build 
+        id: upload-ios-build 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -76,7 +76,7 @@ jobs:
           asset_name: application-ios.ipa
           asset_content_type: application/zip
       - name: Upload Web build
-        id: upload-android-build 
+        id: upload-web-build 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
