--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,8 +1,8 @@
-name: Flutter dev build
+name: Build workflow
 on:
   push:
-      branches:
-        - development
+    branches:
+      - development
   pull_request:
     branches:
       - development
@@ -48,8 +48,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: dev-build-${{ steps.date.outputs.date }}
-          release_name: dev-build-${{ steps.date.outputs.date }}
+          tag_name: ${{ steps.date.outputs.date }}
+          release_name: ${{ steps.date.outputs.date }}
           draft: false
           prerelease: true
       - name: Upload Android build ARM 32 bit
