--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,14 +3,16 @@ on:
   push:
     branches:
       - development
-  pull_request:
-    branches:
-      - development
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
     runs-on: macos-latest
     steps:
+      - name: set Current Time
+        run: |
+        echo "::set-env name=NOW::v$(date +'%Y%m%d.%H%M%S')"
       - uses: actions/checkout@v2 
       - uses: actions/setup-java@v1
         with:
@@ -20,16 +22,6 @@ jobs:
           flutter-version: 2.0.x
       - name: Get packages
         run: flutter pub get
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.date.outputs.date }}
-          release_name: ${{ steps.date.outputs.date }}
-          draft: false
-          prerelease: true
       - name: Build Web
         run: flutter build web
       - name: Compress Web build
@@ -52,6 +44,16 @@ jobs:
           dest: build/ios/payload.zip
       - name: Prepare iOS IPA Step 4
         run: mv build/ios/payload.zip build/ios/application-ios.ipa
+     - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.NOW }}
+          release_name: release ${{ env.NOW }}
+          draft: false
+          prerelease: true
       - name: Upload Android build ARM 32 bit
         id: upload-android32-build 
         uses: actions/upload-release-asset@v1
