--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,12 +3,11 @@ on:
   push:
     branches:
       - development
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
     runs-on: macos-latest
+    if: "contains(github.event.head_commit.message, 'version')"
     steps:
       - name: set Current Time
         run: |
