--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,9 +9,6 @@ jobs:
     runs-on: macos-latest
     if: "contains(github.event.head_commit.message, 'version')"
     steps:
-      - name: set Current Time
-        run: |
-        echo "::set-env name=NOW::v$(date +'%Y%m%d.%H%M%S')"
       - uses: actions/checkout@v2 
       - uses: actions/setup-java@v1
         with:
@@ -43,14 +40,14 @@ jobs:
           dest: build/ios/payload.zip
       - name: Prepare iOS IPA Step 4
         run: mv build/ios/payload.zip build/ios/application-ios.ipa
-     - name: Create Release
+      - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.NOW }}
-          release_name: release ${{ env.NOW }}
+          tag_name: ${{ github.event.head_commit.message }}
+          release_name: release ${{ github.event.head_commit.message }}
           draft: false
           prerelease: true
       - name: Upload Android build ARM 32 bit
