--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: basic user onboarding for flutter
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+2
+version: 1.1.0+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -61,10 +61,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Pricedown
-      fonts:
-        - asset: lib/assets/fonts/pricedown/pricedow.ttf
+  # fonts:
+  #   - family: Pricedown
+  #     fonts:
+  #       - asset: lib/assets/fonts/pricedown/pricedow.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
