--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   logger: 1.0.0
   dio: ^4.0.0-prev3
   path_provider: ^2.0.1 
+  device_info_plus: ^1.0.0
+  uuid: ^3.0.2
 
 
   #Icons
