--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   dio: ^4.0.0-prev3
   path_provider: ^2.0.1 
   device_info_plus: ^1.0.0
+  device_info: ^2.0.0
   uuid: ^3.0.2
 
 
