--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     runs-on: macos-latest
-    if: "contains(github.event.head_commit.message, 'version')"
+    if: "contains(github.event.head_commit.message, 'version bump :')"
     steps:
       - uses: actions/checkout@v2 
       - uses: actions/setup-java@v1
