--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ version: 1.1.0+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: 2.0.3
+  flutter: 2.0.6
 
 dependencies:
   flutter:
@@ -26,11 +26,11 @@ dependencies:
   sqflite: ^2.0.0+3
   path: 1.8.0
   logger: 1.0.0
-  dio: ^4.0.0-prev3
+  dio: 4.0.0
   path_provider: ^2.0.1 
-  device_info_plus: ^1.0.0
+  device_info_plus: ^1.0.1
   device_info: ^2.0.0
-  uuid: ^3.0.2
+  uuid: ^3.0.4
 
 
   #Icons
