--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,22 +15,21 @@ version: 1.1.0+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: 2.2.0
+  flutter: 2.2.2
 
 dependencies:
   flutter:
     sdk: flutter
   intl: 0.17.0
   provider: 5.0.0
-  shared_preferences: 2.0.5
+  shared_preferences: 2.0.6
   sqflite: ^2.0.0+3
   path: 1.8.0
   logger: 1.0.0
   dio: 4.0.0
-  path_provider: ^2.0.1 
-  device_info_plus: ^1.0.1
-  device_info: ^2.0.0
-  uuid: ^3.0.4
+  path_provider: 2.0.2 
+  device_info_plus: 2.0.1 
+  uuid: 3.0.4
 
 
   #Icons
