--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,12 +2,12 @@ name: Build workflow
 on:
   push:
     branches:
-      - development
+      - master
 
 jobs:
   build:
     runs-on: macos-latest
-    if: "startsWith(github.event.head_commit.message, 'dev_')"
+    if: "startsWith(github.event.head_commit.message, 'release_')"
     steps:
       - uses: actions/checkout@v2 
       - uses: actions/setup-java@v1
@@ -49,7 +49,7 @@ jobs:
           tag_name: ${{ github.event.head_commit.message }}
           release_name: ${{ github.event.head_commit.message }}
           draft: false
-          prerelease: true
+          prerelease: false
       - name: Upload Android build ARM 32 bit
         id: upload-android32-build 
         uses: actions/upload-release-asset@v1
