--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,23 +12,22 @@ description: basic user onboarding for flutter
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.2.0+1
-
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: 2.2.2
+  flutter : 2.5.0
 
 dependencies:
   flutter:
     sdk: flutter
   intl: 0.17.0
-  provider: 5.0.0
-  shared_preferences: 2.0.6
-  sqflite: ^2.0.0+3
+  provider: 6.0.0
+  shared_preferences: 2.0.7
+  sqflite: 2.0.0+4
   path: 1.8.0
-  logger: 1.0.0
+  logger: 1.1.0
   dio: 4.0.0
-  path_provider: 2.0.2 
-  device_info_plus: 2.0.1 
+  path_provider: 2.0.3 
+  device_info_plus: 2.1.0 
   uuid: 3.0.4
 
 
