--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fluro: 2.0.3
   intl: 0.17.0
   provider: 6.0.0
   shared_preferences: 2.0.7
