--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ description: basic user onboarding for flutter
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.3.0+1
+version: 1.3.1+1
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter : 2.5.3
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: 2.8.0
 
 dependencies:
   flutter:
@@ -28,9 +28,8 @@ dependencies:
   logger: 1.1.0
   dio: 4.0.1
   path_provider: 2.0.6
-  device_info_plus: 3.1.1 
+  device_info_plus: 3.1.1
   uuid: 3.0.5
-
 
   #Icons
   cupertino_icons: 1.0.4
