--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: basic user onboarding for flutter
 version: 1.3.1+1
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: 2.8.0
+  flutter: 2.8.1
 
 dependencies:
   flutter:
@@ -27,9 +27,14 @@ dependencies:
   path: 1.8.0
   logger: 1.1.0
   dio: 4.0.1
-  path_provider: 2.0.6
+  path_provider: ^2.0.8
   device_info_plus: 3.1.1
   uuid: 3.0.5
+  pin_code_fields: ^7.3.0
+
+  #Amplify
+  amplify_flutter: ^0.3.0-rc.3
+  amplify_auth_cognito: ^0.3.0-rc.3
 
   #Icons
   cupertino_icons: 1.0.4
@@ -53,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/img/logo/logo.jpg
+    - lib/assets/img/logo/otp.gif
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
