--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   device_info_plus: 3.1.1
   uuid: 3.0.5
   pin_code_fields: ^7.3.0
+  flutter_appauth: ^2.2.0
 
   #Amplify
   amplify_flutter: ^0.3.0-rc.3
