--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ amplifytools.xcconfig
 
 #amplify
 amplify/*
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugin_registrant.h
