--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ description: basic user onboarding for flutter
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.3.1+1
+version: 0.0.1+1
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: 2.8.1
+  flutter: 2.10.0
 
 dependencies:
   flutter:
@@ -31,11 +31,10 @@ dependencies:
   device_info_plus: 3.1.1
   uuid: 3.0.5
   pin_code_fields: ^7.3.0
-  flutter_appauth: ^2.2.0
 
   #Amplify
-  amplify_flutter: ^0.3.0-rc.3
-  amplify_auth_cognito: ^0.3.0-rc.3
+  amplify_flutter: 0.3.2
+  amplify_auth_cognito: 0.3.2
 
   #Icons
   cupertino_icons: 1.0.4
