updated login flow

--- a/windows/.gitignore
+++ b/windows/.gitignore
@@ -1,6 +1,5 @@
 flutter/ephemeral/
-flutter/generated_plugin_registrant.cc
-flutter/generated_plugin_registrant.h
+**/flutter/generated_*.*
 
 # Visual Studio user-specific files.
 *.suo
