--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:name="${applicationName}"
         android:label="user_onboarding"
         android:usesCleartextTraffic="true"
+        android:exported="true"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:exported="true"
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
@@ -18,8 +20,8 @@
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN"  android:exported="true" />
+                <category android:name="android.intent.category.LAUNCHER"  android:exported="true" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
