--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -25,7 +25,7 @@ linter:
     file_names: false
     constant_identifier_names: false
     use_key_in_widget_constructors: false
-    lowercase_with_underscores: false
+    # lowercase_with_underscores: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
