--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,28 +13,29 @@ description: basic user onboarding for flutter
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 0.0.1+1
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: 2.10.0
+  sdk: '>=2.18.4'
+  flutter: 3.7.3
 
 dependencies:
   flutter:
     sdk: flutter
-  fluro: 2.0.3
-  intl: 0.17.0
-  provider: 6.0.1
-  shared_preferences: 2.0.8
+  fluro: 2.0.4
+  intl: ^0.17.0
+  provider: 6.0.5
+  shared_preferences: 2.0.17
   sqflite: 2.0.0+4
-  path: 1.8.0
+  path: 1.8.1
   logger: 1.1.0
-  dio: 4.0.1
-  path_provider: ^2.0.8
-  device_info_plus: 3.1.1
-  uuid: 3.0.5
+  dio: 5.0.0
+  path_provider: ^2.0.12
+  device_info_plus: 8.1.0
+  uuid: 3.0.6
   pin_code_fields: ^7.3.0
 
   #Amplify
-  amplify_flutter: 0.3.2
-  amplify_auth_cognito: 0.3.2
+  amplify_flutter: 0.6.12
+  amplify_auth_cognito: 0.6.12
+  amplify_core: 0.6.12
 
   #Icons
   cupertino_icons: 1.0.4
@@ -42,9 +43,7 @@ dependencies:
   google_fonts: 2.1.0
 
 dev_dependencies:
-  flutter_lints: 1.0.4
-  flutter_test:
-    sdk: flutter
+  flutter_lints: 2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
