--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   #Icons
   cupertino_icons: 1.0.4
   fluttericon: 2.0.0
-  google_fonts: 2.1.0
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_lints: 2.0.1
